# civet-webserver

./: .gitignore  .gitmodules  .hgignore  .hgtags  AUTHORS  ArchitectureNotes.wiki  BuildOnAndroid.wiki  CMakeLists.txt  CREDITS.md  EmbeddingMongoose.wiki  Features.wiki  LICENSE  Makefile  Makefile.rtems  MongooseAPI.wiki  MongooseManual.wiki  README.markdown  README.md  RELEASE_NOTES.md  UsefulResources.wiki  WindowsUsage.wiki  WritingWebApplications.wiki  cat_sources.sh  civetweb.h  conanfile.py  index.html  main.c  mongoose.c  mongoose.conf  mongoose.dsp  mongoose.h  mongoose.vcxproj  mongoose_ex.c  mongoose_ex.h  mongoose_sys_porting.h  params.json  read_cmake.txt  rm_cesanta_git_branches.sh
VisualStudio/: civeetweb.sln  civetweb.sln  res.rc
cmake/: AddCCompilerFlag.cmake  AddCXXCompilerFlag.cmake  Config.cmake.in  FindOpenSSL_internal.cmake  civetweb-config.cmake.in
docs/: BuildOnAndroid.html  BuildOnAndroid.md  CivetWebManual.html  CivetWebManual.md  ConfigurationProblems.html  ConfigurationProblems.md  Contribution.md  Features.html  Features.md  MongooseManual.html  MongooseManual.md  OpenSSL.md  UsefulResources.html  UsefulResources.md  UserManual.md  WindowsUsage.html  WindowsUsage.md  WritingWebApplications.html  WritingWebApplications.md  default.html  development-info.html
documentation/: BuildOnAndroid.html  ConfigurationProblems.html  ConfigurationProblems.wiki  Features.html  Features.md  MongooseManual.html  MongooseManual.wiki  UsefulResources.html  UsefulResources.wiki  WindowsUsage.html  WritingWebApplications.html  WritingWebApplications.wiki  (+3 more)
(+259 files in other folders)
